--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+        <dependency>
+            <groupId>gov.nist.hit.hl7.tcamt</groupId>
+            <artifactId>auth-client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 
 	<build>
