--- a/tcamt-lite-controller/pom.xml
+++ b/tcamt-lite-controller/pom.xml
@@ -32,8 +32,8 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
-						<source>1.7</source>
-						<target>1.7</target>
+						<source>1.8</source>
+						<target>1.8</target>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -95,7 +95,7 @@
 
 		<dependency>
 			<groupId>gov.nist.healthcare.tools.hl7.v2.tcamt.lite</groupId>
-			<artifactId>tcamt-lite-resource</artifactId>
+			<artifactId>tcamt-lite-service</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
