--- a/tcamt-lite-domain/pom.xml
+++ b/tcamt-lite-domain/pom.xml
@@ -117,7 +117,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.10.0.pr1</version>
+			<version>2.9.10.3</version>
 		</dependency>
 
 		<dependency>
@@ -169,7 +169,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>5.3.5.Final</version>
+			<version>5.0.1.Final</version>
 		</dependency>
 
 		<dependency>
