--- a/tcamt-lite-controller/src/main/resources/app-web-config.properties
+++ b/tcamt-lite-controller/src/main/resources/app-web-config.properties
@@ -81,10 +81,10 @@ environment.security.online=igl
 environment.type.test=test
 environment.type.prod=prod 
 
-gvt.url=https://hl7v2.gvt.nist.gov/gvt
+gvt.url=https://hl7v2-gvt.nist.gov/gvt
 connect.uploadTokenContext=#/saveCBTokens
 connect.exportEndpoint=api/cb/management/uploadZip
 connect.loginEndpoint=api/accounts/login
-connect.apps=GVT|https://hl7v2.gvt.nist.gov/gvt/;GVT-DEV|https://hit-dev.nist.gov:8099/gvt/;IZ-TOOL-DEV|https://hit-dev.nist.gov:8098/iztool/;HIMSS IIP|https://hl7v2-iz-cdc-testing.nist.gov/iztool/;
+connect.apps=GVT|https://hl7v2-gvt.nist.gov/gvt/;GVT-DEV|https://hit-dev.nist.gov:8099/gvt/;IZ-TOOL-DEV|https://hit-dev.nist.gov:8098/iztool/;HIMSS IIP|https://hl7v2-iz-cdc-testing.nist.gov/iztool/;Test GVT|https://gvt-dev.nist.gov/gvt/;
 connect.createDomainEndpoint=api/domains/new
 connect.domainsEndpoint=api/domains/findByUser
