--- a/tcamt-lite-controller/pom.xml
+++ b/tcamt-lite-controller/pom.xml
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>gov.nist</groupId>
 			<artifactId>hl7-v2-validation</artifactId>
-			<version>1.5.3</version>
+			<version>1.6.3-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
